--- a/AndroidApp_with_MySQL/app/src/main/res/layout/fragment_home.xml
+++ b/AndroidApp_with_MySQL/app/src/main/res/layout/fragment_home.xml
@@ -143,7 +143,7 @@
         android:id="@+id/WIND_SPEED"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="180dp"
+        android:layout_marginLeft="160dp"
         android:layout_marginTop="250dp"
         android:fontFamily="serif"
         android:textColor="@color/purple_700"
@@ -187,9 +187,9 @@
 
     <View
         android:id="@+id/divider3"
-        android:layout_width="110dp"
+        android:layout_width="98dp"
         android:layout_height="2dp"
-        android:layout_marginLeft="74dp"
+        android:layout_marginLeft="86dp"
         android:background="?android:attr/listDivider"
         android:backgroundTint="@color/purple_700"
         android:backgroundTintMode="add" />
@@ -201,7 +201,7 @@
         android:background="@color/purple_500"
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
-        android:text="OUTDOOR"
+        android:text="НА УЛИЦЕ"
         android:textAlignment="viewStart"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -215,7 +215,7 @@
         android:layout_marginTop="30dp"
         android:background="@color/purple_500"
         android:singleLine="true"
-        android:text="TEMP"
+        android:text="ТЕМП."
         android:textColor="@color/white"
         android:textSize="10sp"
         android:textStyle="bold" />
@@ -228,7 +228,7 @@
         android:layout_marginTop="30dp"
         android:background="@color/purple_500"
         android:singleLine="true"
-        android:text="TEMP"
+        android:text="ТЕМП."
         android:textColor="@color/white"
         android:textSize="10sp"
         android:textStyle="bold" />
@@ -241,7 +241,7 @@
         android:layout_marginTop="100dp"
         android:background="@color/purple_500"
         android:singleLine="true"
-        android:text="HUM"
+        android:text="ВЛАЖ."
         android:textColor="@color/white"
         android:textSize="10sp"
         android:textStyle="bold" />
@@ -254,7 +254,7 @@
         android:layout_marginTop="100dp"
         android:background="@color/purple_500"
         android:singleLine="true"
-        android:text="HUM"
+        android:text="ВЛАЖ."
         android:textColor="@color/white"
         android:textSize="10sp"
         android:textStyle="bold" />
@@ -267,7 +267,7 @@
         android:background="@color/purple_500"
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
-        android:text="INDOOR"
+        android:text="В ПОМЕЩЕНИИ"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold" />
@@ -282,9 +282,9 @@
 
     <View
         android:id="@+id/divider9"
-        android:layout_width="123dp"
+        android:layout_width="59dp"
         android:layout_height="2dp"
-        android:layout_marginLeft="250dp"
+        android:layout_marginLeft="315dp"
         android:background="?android:attr/listDivider"
         android:backgroundTint="@color/purple_700"
         android:backgroundTintMode="add" />
@@ -314,7 +314,7 @@
         android:background="@color/purple_500"
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
-        android:text="RAINFALL"
+        android:text="ОСАДКИ"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold" />
@@ -327,7 +327,7 @@
         android:background="@color/purple_500"
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
-        android:text="WIND"
+        android:text="ВЕТЕР"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold" />
@@ -340,7 +340,7 @@
         android:background="@color/purple_500"
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
-        android:text="PRESSURE"
+        android:text="ДАВЛЕНИЕ"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold" />
@@ -353,7 +353,7 @@
         android:background="@color/purple_500"
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
-        android:text="FORECAST"
+        android:text="ПОГОДА СЕЙЧАС"
         android:textColor="@color/white"
         android:textStyle="bold" />
 
@@ -366,16 +366,16 @@
         android:background="@color/purple_500"
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
-        android:text="TIME OF LAST UPDATE"
+        android:text="ВРЕМЯ ОБНОВЛЕНИЯ"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold" />
 
     <View
         android:id="@+id/divider6"
-        android:layout_width="116dp"
+        android:layout_width="114dp"
         android:layout_height="2dp"
-        android:layout_marginLeft="68dp"
+        android:layout_marginLeft="70dp"
         android:layout_marginTop="155dp"
         android:background="?android:attr/listDivider"
         android:backgroundTint="@color/purple_700"
@@ -383,9 +383,9 @@
 
     <View
         android:id="@+id/divider13"
-        android:layout_width="110dp"
+        android:layout_width="95dp"
         android:layout_height="2dp"
-        android:layout_marginLeft="75dp"
+        android:layout_marginLeft="90dp"
         android:layout_marginTop="420dp"
         android:background="?android:attr/listDivider"
         android:backgroundTint="@color/purple_700"
@@ -393,9 +393,9 @@
 
     <View
         android:id="@+id/divider17"
-        android:layout_width="306dp"
+        android:layout_width="250dp"
         android:layout_height="2dp"
-        android:layout_marginLeft="67dp"
+        android:layout_marginLeft="123dp"
         android:layout_marginTop="510dp"
         android:background="?android:attr/listDivider"
         android:backgroundTint="@color/purple_700"
@@ -403,9 +403,9 @@
 
     <View
         android:id="@+id/divider15"
-        android:layout_width="27dp"
+        android:layout_width="14dp"
         android:layout_height="2dp"
-        android:layout_marginLeft="347dp"
+        android:layout_marginLeft="360dp"
         android:layout_marginTop="420dp"
         android:background="?android:attr/listDivider"
         android:backgroundTint="@color/purple_700"
@@ -413,9 +413,9 @@
 
     <View
         android:id="@+id/divider11"
-        android:layout_width="332dp"
+        android:layout_width="320dp"
         android:layout_height="2dp"
-        android:layout_marginLeft="42dp"
+        android:layout_marginLeft="54dp"
         android:layout_marginTop="240dp"
         android:background="?android:attr/listDivider"
         android:backgroundTint="@color/purple_700"
@@ -459,9 +459,9 @@
 
     <View
         android:id="@+id/divider8"
-        android:layout_width="93dp"
+        android:layout_width="25dp"
         android:layout_height="2dp"
-        android:layout_marginLeft="280dp"
+        android:layout_marginLeft="348dp"
         android:layout_marginTop="155dp"
         android:background="?android:attr/listDivider"
         android:backgroundTint="@color/purple_700"
@@ -485,7 +485,7 @@
         android:background="@color/purple_500"
         android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
-        android:text="BAT CHARGE"
+        android:text="НАПРЯЖ. ПИТАНИЯ"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold" />
@@ -497,7 +497,7 @@
         android:layout_marginLeft="325dp"
         android:layout_marginTop="195dp"
         android:fontFamily="casual"
-        android:text="V"
+        android:text="B"
         android:textColor="@color/purple_700"
         android:textSize="30sp"
         android:textStyle="bold" />
@@ -509,7 +509,7 @@
         android:layout_marginLeft="315dp"
         android:layout_marginTop="293dp"
         android:fontFamily="casual"
-        android:text="m/s"
+        android:text="M/C"
         android:textColor="@color/purple_700"
         android:textSize="20sp"
         android:textStyle="bold" />
@@ -519,18 +519,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="110dp"
-        android:layout_marginTop="470dp"
-        android:fontFamily="casual"
-        android:text="mm Hg"
+        android:layout_marginTop="478dp"
+        android:fontFamily="serif"
+        android:text="MM.PT.CT."
         android:textColor="@color/purple_700"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/imagewind"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="260dp"
         android:src="@drawable/def" />
 
@@ -542,7 +542,7 @@
         android:layout_marginTop="270dp"
         android:background="@color/purple_500"
         android:singleLine="true"
-        android:text="VALUE"
+        android:text="СКОРОСТЬ"
         android:textColor="@color/white"
         android:textSize="10sp"
         android:textStyle="bold" />
@@ -551,11 +551,11 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="315dp"
+        android:layout_marginLeft="295dp"
         android:layout_marginTop="340dp"
         android:background="@color/purple_500"
         android:singleLine="true"
-        android:text="DIRECTION"
+        android:text="НАПРАВЛЕНИЕ"
         android:textColor="@color/white"
         android:textSize="10sp"
         android:textStyle="bold" />
